fix project list overflow and iOS momentum scrolling

--- a/app/less/default/modules/project-list.less
+++ b/app/less/default/modules/project-list.less
@@ -17,7 +17,9 @@
         bottom: 0;
         left: 0;
         margin: 0;
-        overflow: auto;
+        overflow-y: scroll;
+        overflow-x: hidden;
+        -webkit-overflow-scrolling: touch;
         padding: 0;
         position: fixed;
         right: 0;
